--- a/Machine_Learning_KNN.ipynb
+++ b/Machine_Learning_KNN.ipynb
@@ -29,28 +29,15 @@
       "metadata": {
         "id": "WswiIpjJLxaT",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 71
-        },
-        "outputId": "585f9ea1-e65a-4c87-d6f3-e422eb13689b"
+        "colab": {}
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/gdrive')\n",
         "%cd /gdrive"
       ],
-      "execution_count": 63,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /gdrive; to attempt to forcibly remount, call drive.mount(\"/gdrive\", force_remount=True).\n",
-            "/gdrive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -94,7 +81,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 275
+          "height": 255
         },
         "outputId": "d2c763b7-a1a9-45e6-b1a3-3124cd07fc1d"
       },
@@ -201,7 +188,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 224
+          "height": 204
         },
         "outputId": "be31a192-76ed-4545-9249-2edc34c43609"
       },
@@ -485,7 +472,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 162
+          "height": 142
         },
         "outputId": "ce5872a7-4863-4497-9134-8c8fa1c58346"
       },
@@ -607,7 +594,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 162
+          "height": 142
         },
         "outputId": "d5aa3e1c-604c-4d3a-cda9-b296d69c5077"
       },
@@ -1757,7 +1744,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 102
         },
         "outputId": "38f29d04-28fa-4889-ce04-515b52e4403d"
       },
@@ -1812,7 +1799,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 34
         },
         "outputId": "94ff5024-7e8b-4022-ba1d-bf8ba8a1bf01"
       },
