--- a/Aprendendo_Python.ipynb
+++ b/Aprendendo_Python.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Aprendendo Python.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,6 +23,21 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Andrade-Douglas/Data-Science/blob/master/Aprendendo_Python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bHcK3aGi9gJI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/gdrive')\n",
+        "%cd /gdrive"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
