--- a/Prefeitura_de_Votorantim.ipynb
+++ b/Prefeitura_de_Votorantim.ipynb
@@ -69,32 +69,15 @@
       "metadata": {
         "id": "Vwq3Qik8u3tZ",
         "colab_type": "code",
-        "outputId": "526b937d-b8b5-4afe-cde4-f6d7f7ff37cc",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 139
-        }
+        "colab": {}
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/gdrive')\n",
         "%cd /gdrive"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /gdrive\n",
-            "/gdrive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
